src/styles/main.scss
@import 'base';

:root {
    --bg-markdown: #fff;
    --bg-secondary: #f5f5f5;
    --bg-markdown-header: #f5f5f5;
    --color-text-primary: #35393f;
    --color-text-secondary: #35393f;
    --color-markdown-border: #e4e4e4;
    --color-markdown-head-primary: #35393f;
    --color-markdown-head-secondary: #35393f;
    --bg-toast: #e4e4e4;
    --color-toast: #2b2d31;
    --bg-preview-hover: #e4e4e4;
}

html[data-theme='dark'] {
    --bg-markdown: #151619;
    --bg-secondary: #2b2d31;
    --bg-markdown-header: #1d1f22;
    --color-text-primary: #c1c4cb;
    --color-text-secondary: #a9aaac;
    --color-markdown-border: #35393f;
    --color-markdown-head-primary: #fff;
    --color-markdown-head-secondary: #a9aaac;
    --bg-toast: #35393f;
    --color-toast: #c1c4cb;
    --bg-preview-hover: #2b2d31;
}

html {
    box-sizing: border-box;
    font-size: 56.25%;
}

* {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

body {
    font-family: $font-sans-primary;
    font-weight: 400;
    font-size: 1.8rem;
    color: $color-white;

    overflow: hidden;
}

// prettier-ignore
button, input {
    font: inherit;
    border: none;
    outline: none;
    cursor: pointer;
    background-color: transparent;
    color: inherit;
}

a:link {
    font: inherit;
    color: inherit;
    text-decoration: none;
}

main {
    transition: $sidebar-transition;
    background-color: var(--bg-markdown);
    min-height: 100vh;

    &.collapse {
        transform: translateX(270px);
    }
}

